substrate/frame/support/test/tests/construct_runtime_ui/undefined_inherent_part.stderr
error: `Pallet` does not have #[pallet::inherent] defined, perhaps you should remove `Inherent` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:22:1
   |
22 |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
65 | / construct_runtime! {
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet expanded::{}::{Pallet, Inherent},
70 | |     }
71 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_inherent_check::is_inherent_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `create_inherent` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:65:1
   |
28 |       pub struct Pallet<T>(_);
   |       -------------------- function or associated item `create_inherent` not found for this struct
...
65 |   construct_runtime! {
   |  _^
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet expanded::{}::{Pallet, Inherent},
70 | |     }
71 | | }
   | |_^ function or associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `create_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `is_inherent` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:65:1
   |
28 |       pub struct Pallet<T>(_);
   |       -------------------- function or associated item `is_inherent` not found for this struct
...
65 |   construct_runtime! {
   |  _^
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet expanded::{}::{Pallet, Inherent},
70 | |     }
71 | | }
   | |_^ function or associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `is_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `check_inherent` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:65:1
   |
28 |       pub struct Pallet<T>(_);
   |       -------------------- function or associated item `check_inherent` not found for this struct
...
65 |   construct_runtime! {
   |  _^
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet expanded::{}::{Pallet, Inherent},
70 | |     }
71 | | }
   | |_^ function or associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `check_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `INHERENT_IDENTIFIER` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:65:1
   |
28 |       pub struct Pallet<T>(_);
   |       -------------------- associated item `INHERENT_IDENTIFIER` not found for this struct
...
65 |   construct_runtime! {
   |  _^
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet expanded::{}::{Pallet, Inherent},
70 | |     }
71 | | }
   | |_^ associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `INHERENT_IDENTIFIER`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `is_inherent_required` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:65:1
   |
28 |       pub struct Pallet<T>(_);
   |       -------------------- function or associated item `is_inherent_required` not found for this struct
...
65 |   construct_runtime! {
   |  _^
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet expanded::{}::{Pallet, Inherent},
70 | |     }
71 | | }
   | |_^ function or associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `is_inherent_required`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
